tests/language_modules/16_control_flow_edges/invalid_syntax/while_without_invariant.vf
module Control.WhileWithoutInvariant

procedure main()
is
    let amount: Integer = 0
    while amount < 1
    do
        amount := amount + 1
    end while
end main

end Control.WhileWithoutInvariant